# cardProj

./: .gitignore  CMakeLists.txt  README.md  atlas_info.txt  build.sh  conanfile.txt  nextSteps.txt  run.sh
.github/workflows/: ci.yml
inc/: cardproj.h  cardproj.hpp  defines.h  defines.hpp  entity.h  entity.hpp  logging.h  playingCard.h  textureManager.h  textureManager.hpp  zsorting.hpp
src/: CMakeLists.txt  cardproj.cpp  entity.cpp  logging.cpp  main.cpp  test.cpp  textureManager.cpp  zsorting.cpp
test/: CMakeLists.txt  sdlTests.cpp
